deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reddit-app
  template:
    metadata:
      labels:
        app: reddit-app
    spec:
      containers:
      - name: reddit-app
        image: mukeshr29/redditclone-1
        ports:
        - containerPort: 3000
