service.yml
apiVersion: v1
kind: Service
metadata:
  name: reddit-service
spec:
  selector:
    app: reddit-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
